# SoftwareRenderer

./: CMakeLists.txt  README.md
res/models/: cube.stl  suzanne.stl
src/engine/: CMakeLists.txt  Color.cpp  Color.h  DrawType.h  Engine.cpp  Engine.h  IRenderingEngine.h  IResource.h  IScene.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  InputHandler.cpp  InputHandler.h  InputState.h  Material.cpp  Material.h  Profiler.cpp  Profiler.h  RenderSurface.cpp  RenderSurface.h  RenderingMode.h  RenderingWindow.cpp  RenderingWindow.h  ResourceLoader.cpp  ResourceLoader.h  ResourceManager.cpp  ResourceManager.h  ShadingType.h  TextOverlay.cpp  TextOverlay.h  Texture.cpp  Texture.h  Utils.cpp  Utils.h
src/engine2d/: CMakeLists.txt  Engine2D.cpp  Engine2D.h  Line2D.cpp  Line2D.h  Point2D.cpp  Point2D.h  Polygon2D.cpp  Polygon2D.h  Primitive2DRenderer.cpp  Primitive2DRenderer.h  RenderingEngine2D.cpp  RenderingEngine2D.h  Scene2D.cpp  Scene2D.h  Sprite2D.cpp  Sprite2D.h  Triangle2D.cpp  Triangle2D.h  Utils2D.cpp  Utils2D.h  VBO2D.cpp  VBO2D.h  Vertex2D.h
src/engine2d_test/: CMakeLists.txt  Main.cpp
src/engine3d/: AmbientLight.cpp  AmbientLight.h  CMakeLists.txt  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  InterpolationTools.cpp  InterpolationTools.h  Light.cpp  Light.h  Mech3D.cpp  Mesh3D.h  MeshBuilder.cpp  MeshBuilder.h  PipelineConfiguration3D.h  PointLight.cpp  PointLight.h  Primitive3DRenderer.cpp  Primitive3DRenderer.h  RasteringTools.cpp  RasteringTools.h  RenderPipeline3D.cpp  RenderPipeline3D.h  RenderingEngine3D.cpp  RenderingEngine3D.h  Scene3D.cpp  Scene3D.h  SceneLighting.cpp  SceneLighting.h  ShaderTools.cpp  ShaderTools.h  ShadingType.h  TriangleRasterizer.h  VBO3D.cpp  VBO3D.h  Vertex3D.h  Vertex4D.h
src/engine3d_demo/: CMakeLists.txt  Main.cpp
src/engine3d_test/: CMakeLists.txt  Main.cpp
src/engine_test/: CMakeLists.txt  Main.cpp
src/glut_test/: CMakeLists.txt  Main.cpp
src/math/: CMakeLists.txt  Frame2D.cpp  Frame2D.h  Frame3D.cpp  Frame3D.h  MathUtils.cpp  MathUtils.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Rotation3D.cpp  Rotation3D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h  Vector4D.cpp  Vector4D.h
src/model_importer/: AssimpImporter.cpp  AssimpImporter.h  CMakeLists.txt  FileUtils.cpp  FileUtils.h  ModelImporter.cpp  ModelImporter.h  StlLoader.cpp  StlLoader.h
src/sdl_test/: CMakeLists.txt  Main.cpp
src/starfield/: CMakeLists.txt  Main.cpp  Star.cpp  Star.h
src/test/: CMakeLists.txt
